--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -783,10 +783,89 @@
   },
   "staff": {
     "title": "Staff",
-    "description": "Staff management",
+    "description": "System staff management",
     "list_title": "Staff List",
     "create": "Add Staff",
-    "view": "View Staff"
+    "create_title": "New Staff",
+    "edit": "Edit Staff",
+    "edit_title": "Edit Staff",
+    "delete": "Delete Staff",
+    "view": "View Staff",
+    "detail": "Staff Details",
+    "no_staff": "No staff registered",
+    "no_staff_message": "Start by adding your first team member",
+    "create_first": "Add First Staff",
+    "search_placeholder": "Search by name, username, email...",
+    "columns": {
+      "id": "ID",
+      "full_name": "Full Name",
+      "username": "Username",
+      "email": "Email",
+      "trigram": "Trigram",
+      "position": "Position",
+      "role": "Role",
+      "status": "Status",
+      "created_at": "Created At",
+      "actions": "Actions"
+    },
+    "fields": {
+      "username": "Username",
+      "email": "Email",
+      "first_name": "First Name",
+      "last_name": "Last Name",
+      "trigram": "Trigram",
+      "phone": "Phone",
+      "position": "Position",
+      "role": "Role",
+      "status": "Status",
+      "is_active": "Active user",
+      "is_admin": "Administrator",
+      "created_at": "Created at",
+      "updated_at": "Last updated"
+    },
+    "filters": {
+      "all": "All",
+      "active": "Active",
+      "inactive": "Inactive",
+      "status": "Status",
+      "role": "Role",
+      "admin": "Administrators",
+      "user": "Users"
+    },
+    "role": {
+      "admin": "Administrator",
+      "user": "User"
+    },
+    "sections": {
+      "personal_info": "Personal Information",
+      "contact_info": "Contact Information",
+      "work_info": "Work Information",
+      "permissions": "Permissions",
+      "credentials": "Credentials",
+      "audit_info": "Audit"
+    },
+    "actions": {
+      "edit": "Edit",
+      "delete": "Delete",
+      "activate": "Activate",
+      "deactivate": "Deactivate"
+    },
+    "messages": {
+      "loading": "Loading staff...",
+      "error_loading": "Error loading staff: {error}",
+      "error_saving": "Error saving: {error}",
+      "created": "Staff created successfully",
+      "updated": "Staff updated successfully",
+      "deleted": "Staff deleted successfully",
+      "delete_confirm": "Are you sure you want to delete '{name}'?",
+      "activated": "Staff activated successfully",
+      "deactivated": "Staff deactivated successfully",
+      "fake_data_success": "Fake data generated successfully",
+      "fake_data_error": "Could not generate fake data: {error}"
+    },
+    "validation": {
+      "trigram_length": "Trigram must be exactly 3 characters"
+    }
   },
   "settings": {
     "title": "Settings",
