feat(i18n): improve settings localization and add theme options
Update settings description to be more user-focused and add theme option translations (light, dark, system) for English, French, and Spanish locales.

--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -869,11 +869,14 @@
   },
   "settings": {
     "title": "Settings",
-    "description": "Application settings",
+    "description": "Customize your app experience",
     "general": "General",
     "appearance": "Appearance",
     "language": "Language",
     "theme": "Theme",
+    "theme_light": "Light",
+    "theme_dark": "Dark",
+    "theme_system": "System",
     "notifications": "Notifications"
   },
   "common": {
